use jsdelivr CDN for jquery

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
     <!-- import web3.js package -->
     <!-- this is web3@0.x, please do not change to web3@1.x, otherwise the application will break -->
     <script src="https://cdn.jsdelivr.net/npm/web3@0.20.7/index.min.js"></script>
